Fixed repo name
Signed-off-by: Toddy Mladenov <toddysm@gmail.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -4,7 +4,7 @@
 * @stevelasker
 
 # Repo-Level Owners (in alphabetical order)
-# Note: This is only for the notaryproject/notation repo
+# Note: This is only for the notaryproject/notaryproject repo
 * @gokarnm
 * @priteshbandi
 * @shizhMSFT
