chore: fix conflicts
Signed-off-by: Feynman Zhou <feynmanzhou@microsoft.com>

    pick eaefc35 chore: fix conflicts

Signed-off-by: Feynman Zhou <feynmanzhou@microsoft.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,13 +1,3 @@
-# Org-Level Owners (in alphabetical order)
-* @justincormack 
-* @niazfk
-* @stevelasker
+# Org-Level and repo-Level Owners (in alphabetical order). Please note this is only for the notaryproject/notaryproject repo
 
-# Repo-Level Owners (in alphabetical order)
-# Note: This is only for the notaryproject/notaryproject repo
-* @gokarnm
-* @priteshbandi
-* @shizhMSFT
-* @toddysm
-* @vaninrao10
-* @yizha1
+* @gokarnm @justincormack @niazfk @priteshbandi @stevelasker @shizhMSFT @toddysm @vaninrao10 @yizha1
