chore: fix syntax error in CODEOWNERS file (#243)
* doc: Add Yi as a notaryproject maintainer

Signed-off-by: Feynman Zhou <feynmanzhou@microsoft.com>

* Added CODEOWNERS and MAINTAINERS files (#240)

This PR combines all the changes from the following PRs for updating the maintainers for notaryproject/notaryproject sub-project:
Add Milind Gokarn #228
Add Pritesh Bandi #227
Add Shiwei Zhang #234
Add Toddy Mladenov #236
Add Vani Rao #229
Add Yi Zha #237

To keep a balance I dropped Add Feynman Zhou #235. The proposal is to abandon the above PRs and merge only this one.

Signed-off-by: Toddy Mladenov toddysm@gmail.com
Signed-off-by: Feynman Zhou <feynmanzhou@microsoft.com>

* fix syntax error in CODEOWNERS file

Signed-off-by: Feynman Zhou <feynmanzhou@microsoft.com>

    pick d194f78 fix syntax error in CODEOWNERS file

Signed-off-by: Feynman Zhou <feynmanzhou@microsoft.com>

* fix syntax error in CODEOWNERS file

Signed-off-by: Feynman Zhou <feynmanzhou@microsoft.com>

    pick d194f78 fix syntax error in CODEOWNERS file

Signed-off-by: Feynman Zhou <feynmanzhou@microsoft.com>

* Added CODEOWNERS and MAINTAINERS files (#240)

This PR combines all the changes from the following PRs for updating the maintainers for notaryproject/notaryproject sub-project:
Add Milind Gokarn #228
Add Pritesh Bandi #227
Add Shiwei Zhang #234
Add Toddy Mladenov #236
Add Vani Rao #229
Add Yi Zha #237

To keep a balance I dropped Add Feynman Zhou #235. The proposal is to abandon the above PRs and merge only this one.

Signed-off-by: Toddy Mladenov toddysm@gmail.com
Signed-off-by: Feynman Zhou <feynmanzhou@microsoft.com>

* chore: fix conflicts

Signed-off-by: Feynman Zhou <feynmanzhou@microsoft.com>

    pick eaefc35 chore: fix conflicts

Signed-off-by: Feynman Zhou <feynmanzhou@microsoft.com>

* fix conflicts

Signed-off-by: Feynman Zhou <feynmanzhou@microsoft.com>

* fix git signing problem

Signed-off-by: Feynman Zhou <feynm

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,13 +1,2 @@
-# Org-Level Owners (in alphabetical order)
-* @justincormack 
-* @niazfk
-* @stevelasker
-
-# Repo-Level Owners (in alphabetical order)
-# Note: This is only for the notaryproject/notaryproject repo
-* @gokarnm
-* @priteshbandi
-* @shizhMSFT
-* @toddysm
-* @vaninrao10
-* @yizha1
+# Org-Level and repo-Level Owners (in alphabetical order). Please note this is only for the notaryproject/notaryproject repo
+* @gokarnm @justincormack @niazfk @priteshbandi @stevelasker @shizhMSFT @toddysm @vaninrao10 @yizha1
