--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -30,3 +30,4 @@ jobs:
           days-before-pr-stale: 45
           days-before-issue-close: 30
           days-before-pr-close: 30
+          exempt-all-milestones: true
