--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,2 @@
 # Org-Level and repo-Level Owners (in alphabetical order). Please note this is only for the notaryproject/notaryproject repo
-* @gokarnm @justincormack @niazfk @priteshbandi @stevelasker @shizhMSFT @toddysm @vaninrao10 @yizha1
+* @gokarnm @niazfk @priteshbandi @shizhMSFT @toddysm @vaninrao10 @yizha1
